
VERSION 1.0.8
- Added backup_script option to have rsnapshot invoke backup scripts directly
- Added support routines for the backup_script feature
- Added two example backup scripts in the utils/ directory, one for Postgres,
  and one for downloading the CVS root for rsnapshot
- Fixed ssh_args local override for individual backup points
- Added additional comments to various sections of the code

VERSION 1.0.7
- Added ssh_args parameter to pass arbitrary args to ssh
- Fully integrated Autoconf build support for the program and config file
- Provided more helpful error messages when the config file is not found
- Fixed false "Can not remove lockfile" error when cmd_ssh is not defined
  but is referenced later in backup points

VERSION 1.0.6
- added \n to utime() debug message
- moved all rsync calls into dynamically populated arrays
- added rsync_short_args and rsync_long_args to config file
- improved parse_backup_opts() validation code
- Fixed "make install" vs. INSTALL bug for Mac OS X
- Ted Zlatanov <tzz@lifelogs.com> added Autoconf support!

VERSION 1.0.5 (Nov 14 00:22 2003)
------------------------------------------------------------------------------
- Changed domain to rsnapshot.org
- Added lockfile feature, with patch to enable it by default in the RPM
- Updated man page to include the one_fs feature, did general clean up
- Fixed '..' pattern matching bug that would exclude valid files
- Updated Makefile to use "install", now allows "make tar" as a non-root user
- Moved most remaining regexes into dedicated subroutines

VERSION 1.0.4 (Nov 6 23:18 2003)
------------------------------------------------------------------------------
- Added one_fs feature to the config file (same as -x on the command line)
- Fixed anonymous rsync feature, which had been broken in 1.0.3
- Added verification data to the RPM package

VERSION 1.0.3 (Nov 2 14:43 2003)
------------------------------------------------------------------------------