@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "RSNAPSHOT-PROGRAM 1"
-.TH RSNAPSHOT-PROGRAM 1 "2003-12-25" "perl v5.8.0" "User Contributed Perl Documentation"
+.TH RSNAPSHOT-PROGRAM 1 "2003-12-26" "perl v5.8.0" "User Contributed Perl Documentation"
 .SH "NAME"
 rsnapshot \- remote filesystem snapshot utility
 .SH "SYNOPSIS"
@@ -274,20 +274,20 @@ hourly.0/ will be rsynced directly from the filesystem.
 .RE
 .RS 4
 .Sp
-\&\fBrsync_short_args    \-al\fR
+\&\fBrsync_short_args    \-a\fR
 .Sp
 .RS 4
 List of short arguments to pass to rsync. If not specified,
-\&\*(L"\-al\*(R" is the default.
+\&\*(L"\-a\*(R" is the default.
 .RE
 .RE
 .RS 4
 .Sp
-\&\fBrsync_long_args     \-\-delete \-\-numeric\-ids \-\-devices\fR
+\&\fBrsync_long_args     \-\-delete \-\-numeric\-ids\fR
 .Sp
 .RS 4
 List of long arguments to pass to rsync. If not specified,
-\&\*(L"\-\-delete \-\-numeric\-ids \-\-devices\*(R" is the default.
+\&\*(L"\-\-delete \-\-numeric\-ids\*(R" is the default.
 .RE
 .RE
 .RS 4
