@@ -10,6 +10,7 @@ VERSION 1.0.8
   and one for downloading the CVS root for rsnapshot
 - Fixed ssh_args local override for individual backup points
 - Added additional comments to various sections of the code
+- Removed redundant rsync arguments from the default
 
 VERSION 1.0.7
 - Added ssh_args parameter to pass arbitrary args to ssh
